extended deadlines may have penalty

--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -50,12 +50,18 @@
             <dd class="exercise-info-required-points">{{ exercise.points_to_pass }}</dd>
             {% endif %}
 
-            {% if exercise|has_deviation:profile %}
-            <dt>{% trans "Extended deadline" %}</dt>
-            <dd class="exercise-info-deadline">{{ exercise|has_deviation:profile }}</dd>
-            {% else %}
+
+
             <dt>{% trans "Deadline" %}</dt>
             <dd class="exercise-info-deadline">{{ exercise.course_module.closing_time }}</dd>
+            {% if exercise|deviation_deadline:profile %}
+            <dt>{% trans "Extended deadline" %}</dt>
+            <dd class="exercise-info-deadline">
+              {{ exercise|deviation_deadline:profile }}
+              {% if exercise|has_deviation_penalty:profile|percent > 0 %}
+                (-{{ exercise.course_module.late_submission_penalty|percent }}%)
+              {% endif %}
+            </dd>
             {% endif %}
 
             {% if exercise.course_module.late_submissions_allowed %}
