Add remove-deviation view similar to add-deviation view

--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -17,6 +17,10 @@
 		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
 		{% trans "Add new deadline deviations" %}
 	</a>
+	<a class="btn btn-primary btn-xs" href="{{ instance|url:'deviations-remove-many-dl' }}">
+		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+		{% trans "Remove deadline deviations" %}
+	</a>
 </p>
 <div class="panel panel-primary">
 	<div class="panel-heading">
