Fewer queries, clarification, translations and other small things

--- a/deviations/templates/deviations/override.html
+++ b/deviations/templates/deviations/override.html
@@ -19,9 +19,9 @@
 		<tr>
 			<th>{% trans "Submitter" %}</th>
 			<th>{% trans "Exercise" %}</th>
-			<th>{% trans "Extra time before (minutes)" %}</th>
+			<th>{% trans "Current extra time (minutes)" %}</th>
 			<th>{% trans "New extra time (minutes)" %}</th>
-			<th>{% trans "Without late penalty before" %}</th>
+			<th>{% trans "Without late penalty currently" %}</th>
 			<th>{% trans "Without late penalty after" %}</th>
 			<th>{% trans "Override" %}</th>
 		</tr>
