Add a submission deviations view to the edit course page

--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -27,7 +27,7 @@
 	<div class="panel-heading">
 		<h3 class="panel-title">{% trans "Deadline deviations" %}</h3>
 	</div>
-	<table class="table table-striped table-bordered table-condensed">
+	<table class="table table-striped table-bordered table-condensed" data-deviations-list>
 		<tr>
 			<th>{% trans "Submitter" %}</th>
 			<th>{% trans "Exercise" %}</th>
