--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -46,9 +46,14 @@
                 {% trans "Tags" %}
             </a>
         </li>
-        <li role="presentation" class="menu-deviations">
+        <li role="presentation" class="menu-dl-deviations">
             <a href="{{ instance|url:'deviations-list-dl' }}">
-                {% trans "Deviations" %}
+                {% trans "Deadline deviations" %}
+            </a>
+        </li>
+        <li role="presentation" class="menu-submission-deviations">
+            <a href="{{ instance|url:'deviations-list-submissions' }}">
+                {% trans "Submission deviations" %}
             </a>
         </li>
         <li role="presentation" class="menu-batch-assess">
