--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -168,6 +168,13 @@
 			</ul>
 		</div>
 
+		<!--Alerts-->
+		<div id="alerts" style="margin: 30px">
+			<div id="ajax-failed-alert" class="alert alert-danger collapse" role="alert">
+				{% trans "Data couldn't be fetched. Please check your internet connection." %}
+			</div>
+		</div>
+
 		<!--Data table-->
 		<div style="display: none;" id="table-points-div" class="table-responsive">
 			<table id="table-points" class="table table-striped table-bordered table-condensed filtered-table">
