--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -387,6 +387,12 @@ td.submissions-dropdown {
   margin-right: 20px;
   color: green;
 }
+.neutral-option {
+  margin-left: -40px;
+  margin-right: 18px;
+  font-size: 18px;
+  color: #f5bc09;
+}
 .btn-group button:first-child {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
