--- a/exammode/templates/exammode/exam_end.html
+++ b/exammode/templates/exammode/exam_end.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="text-center">
     <p>
-        Please confirm that you have answered to all required questions before finsihing the exam. You won't be able to
+        Please confirm that you have answered to all required questions before finishing the exam. You won't be able to
         edit your submissions after finishing the exam.
         <br>You can go back to the exam with the back button.
     </p>
@@ -14,6 +14,7 @@
     <form action="" method="post">
         {% csrf_token %}
         <input type="submit" name="end-exam" value="Finish exam" class="btn btn-success">
+        <input type="submit" name="cancel" value="Cancel"  class="btn btn-primary"> 
     </form>
 </div>
 {% endblock content %}
