--- a/exammode/templates/exammode/exam_start.html
+++ b/exammode/templates/exammode/exam_start.html
@@ -12,12 +12,12 @@
 					<b>
 						{{exam.course_instance.course}}
 						<br>
-						{{exam.can_start}}
+						Room: {{exam.room}}
 					</b>
-				</p>    
+				</p>
 				<a
-					style="display: inline-block; vertical-align: top;" 
-					class="btn btn-success" 
+					style="display: inline-block; vertical-align: top;"
+					class="btn btn-success"
 					href="{% url 'exam_details' exam.id %}">
 					Start exam
 				</a>
