--- a/exammode/templates/exammode/exam_start.html
+++ b/exammode/templates/exammode/exam_start.html
@@ -7,16 +7,10 @@
 	{% if active_exams %}
 		<ul class="list-unstyled">
 			{% for exam in active_exams %}
-			<li>
-				<p style="display: inline-block;">
-					<b>
-						{{exam.course_instance.course}}
-						<br>
-						Room: {{exam.room}}
-					</b>
-				</p>
+			<li class="list-group-item">
+					<b>{{exam.course_instance}}</b>;
+					{{exam.name}}, Room: {{exam.room}}
 				<a
-					style="display: inline-block; vertical-align: top;"
 					class="btn btn-success"
 					href="{% url 'exam_details' exam.id %}">
 					Start exam
