--- a/exammode/templates/exammode/staff/exam_management.html
+++ b/exammode/templates/exammode/staff/exam_management.html
@@ -18,11 +18,14 @@
 <form method="post">
 	{% csrf_token %}
 	{{ form.non_field_errors }}
-	<div class="content-divider-exam-session">Content</div>
 	<div class="field-wrapper-exam-session">
 		{{ form.course_instance.errors }}
 		{{ form.course_instance }}
 	</div>
+	<div class="field-wrapper-exam-session">
+		{{ form.name.errors }}
+		{{ form.name.label_tag}}
+		{{ form.name }}
 	<div class="field-wrapper-exam-session">
 		{{ form.exam_module.errors }}
 		{{ form.exam_module.label_tag}}
@@ -33,16 +36,15 @@
 		{{ form.room.label_tag}}
 		{{ form.room }}
 	</div>
-	<input class="btn btn-primary" name="add" type="submit" value="Submit" />
+	<input class="btn btn-primary" name="add" type="submit" value="Add" />
 </form>
 
-<br style="line-height: 5;">
-
+<h3>List of active exams:</h3>
+{% if exam_sessions %}
 <ul class="list-group">
 	{% for exam_session in exam_sessions %}
 	<li class="list-group-item">
-		{{exam_session.exam_module}}
-		{{exam_session.room}}
+		{{exam_session.name}}, Module: {{exam_session.exam_module}}, Room: {{exam_session.room}}
 		<a class="btn btn-warning" href="{% url 'edit-exam-session' course_slug=course.url instance_slug=instance.url pk=exam_session.id %}">
 			Edit
 		</a>
@@ -58,5 +60,7 @@
 	</li>
 	{% endfor %}
 </ul>
-
+{% else %}
+No active exams.
+{% endif %}
 {% endblock %}
