Add translation blocks to templates
Translations haven't been made yet.
Also modified database quaries.

--- a/exammode/static/exammode/css/exam.css
+++ b/exammode/static/exammode/css/exam.css
@@ -13,11 +13,11 @@
   cursor: pointer;
 }
 
-.contentDivider {
+.content-divider {
   padding: 30 px;
 }
 
-.fieldWrapper {
+.field-wrapper {
   padding: 10 px;
 }
 
