--- a/exammode/templates/exammode/exam_start.html
+++ b/exammode/templates/exammode/exam_start.html
@@ -13,7 +13,7 @@
 				<a
 					class="btn btn-success"
 					href="{% url 'exam_details' exam.id %}">
-					Start exam
+					{% trans "Start exam" %}
 				</a>
 			</li>
 			{% endfor %}
