--- a/exammode/templates/exammode/examsession_confirm_delete.html
+++ b/exammode/templates/exammode/examsession_confirm_delete.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <form class="text-center" method="post">{% csrf_token %}
-	<p>Are you sure you want to delete "{{ object }}"?</p>
+	<p>{%trans "Are you sure you want to delete" %} "{{ object }}"?</p>
 	<input class="btn btn-primary" type="submit" name="confirm" value="Confirm" />
-	<input class="btn btn-primary" type="submit" name="cancel" value="Cancel" /> 
+	<input class="btn btn-primary" type="submit" name="cancel" value="Cancel" />
 </form>
 {% endblock %}
