--- a/exammode/templates/exammode/base.html
+++ b/exammode/templates/exammode/base.html
@@ -108,7 +108,7 @@
 					{% if instance %}
 					<li>
 						<a style="display: inline-block; vertical-align: top;" class="btn btn-success" href="{% url 'exam_end' user.userprofile.active_exam.exam_taken.id %}">
-							Finish exam
+							{% trans "Finish exam" %}
 						</a>
 					</li>
 					{% endif %}
