--- a/exammode/templates/exammode/exam_end.html
+++ b/exammode/templates/exammode/exam_end.html
@@ -5,16 +5,17 @@
 {% block content %}
 <div class="text-center">
     <p>
-        Please confirm that you have answered to all required questions before finishing the exam. You won't be able to
-        edit your submissions after finishing the exam.
-        <br>You can go back to the exam with the back button.
+        {% trans
+        "Please confirm that you have answered to all required questions before finishing the exam.
+        You won't be able to edit your submissions after finishing the exam." %}
+        <br> {% trans "You can go back to the exam with the back button." %}
     </p>
 
     <h1>{{examsession.course_instance.course}}</h1>
     <form action="" method="post">
         {% csrf_token %}
         <input type="submit" name="end-exam" value="Finish exam" class="btn btn-primary">
-        <input type="submit" name="cancel" value="Cancel"  class="btn btn-basic"> 
+        <input type="submit" name="cancel" value="Cancel"  class="btn btn-basic">
     </form>
 </div>
 {% endblock content %}
