--- a/exammode/templates/exammode/examsession_detail.html
+++ b/exammode/templates/exammode/examsession_detail.html
@@ -5,11 +5,11 @@
 {% block content %}
 <div class="text-center">
 	<p>
-		Please confirm that you selected the correct exam.
+		{% trans "Please confirm that you selected the correct exam." %}
 		<br>You can go back to exam selection with the button below.
 	</p>
 	<a class="btn btn-danger btn-lg" href="{% url 'exam_start' %}">
-		Return
+		{% trans "Return" %}
 	</a>
 	<h1>{{examsession.course_instance.course}}</h1>
 		{{examsession.exam_module}}
