--- a/exammode/templates/exammode/examsession_detail.html
+++ b/exammode/templates/exammode/examsession_detail.html
@@ -1,6 +1,7 @@
 {% extends "exammode/base.html" %}
 {% load course %}
 {% load static %}
+{% load i18n %}
 
 {% block content %}
 <div class="text-center">
