Add blocktrans to multiline translations

--- a/exammode/templates/exammode/exam_final.html
+++ b/exammode/templates/exammode/exam_final.html
@@ -3,7 +3,9 @@
 
 {% block content %}
 <div class="text-center">
-    {% trans "Thank you for taking the exam. The course teacher has chosen that feedback and grade is available after some period
-    of time and possibly after manual grading. Please follow your normal course information channels for the schedule." %}
+    {% blocktrans %}
+    Thank you for taking the exam. The course teacher has chosen that feedback and grade is available after some period
+    of time and possibly after manual grading. Please follow your normal course information channels for the schedule.
+    {% endblocktrans %}
 </div>
 {% endblock content %}
