--- a/exammode/templates/exammode/exam_end.html
+++ b/exammode/templates/exammode/exam_end.html
@@ -6,9 +6,10 @@
 {% block content %}
 <div class="text-center">
     <p>
-        {% trans
-        "Please confirm that you have answered to all required questions before finishing the exam.
-        You won't be able to edit your submissions after finishing the exam." %}
+        {% blocktrans %}
+        Please confirm that you have answered to all required questions before finishing the exam.
+        You won't be able to edit your submissions after finishing the exam.
+        {% endblocktrans %}
         <br> {% trans "You can go back to the exam with the back button." %}
     </p>
 
