--- a/exammode/templates/exammode/exam_module_not_found.html
+++ b/exammode/templates/exammode/exam_module_not_found.html
@@ -3,8 +3,10 @@
 
 {% block content %}
 <div class="text-center container">
-    <h2>{% trans "Unfortunately the course personnel has not yet defined content for this exam session.
+    <h2>{% blocktrans %}
+      Unfortunately the course personnel has not yet defined content for this exam session.
       If you should be taking an exam right now, please contact invigilators or
-      report of the problem other way." %}</h2>
+      report of the problem other way.
+      {% endblocktrans %}</h2>
 </div>
 {% endblock content %}
