--- a/exammode/templates/exammode/examsession_detail.html
+++ b/exammode/templates/exammode/examsession_detail.html
@@ -7,7 +7,7 @@
 <div class="text-center">
 	<p>
 		{% trans "Please confirm that you selected the correct exam." %}
-		<br>You can go back to exam selection with the button below.
+		<br>{% trans "You can go back to exam selection with the button below." %}
 	</p>
 	<a class="btn btn-danger btn-lg" href="{% url 'exam_start' %}">
 		{% trans "Return" %}
